syntax = "proto3";

package ripple.wsmessage;



message SingleMessageContent {
  string text = 2;
  string file_url = 3;
  string file_name = 4;
}

message GroupCommandMessageContent {
  int32  command_type = 1;
  string text = 2;
}

message SendMessageReq {
  int64 sender_id = 1;
  string conversation_id = 2;
  int64 receiver_id = 3;
  int64 group_id = 4;
  int64 message_id = 5;
  int64 send_timestamp = 6;
  oneof message {
    SingleMessageContent single_message_content = 7;
    GroupCommandMessageContent group_command_message_content = 8;
  };
}


// Event types that can be pushed to users via gateway
enum PushEventType {
  PUSH_EVENT_TYPE_UNSPECIFIED = 0;
  PUSH_EVENT_TYPE_SELF_INFO_UPDATE = 1;
  PUSH_EVENT_TYPE_RELATION_UPDATE = 2;
  PUSH_EVENT_TYPE_CONVERSATION_UPDATE = 3;
}

// Message types for gateway push
enum PushMessageType {
  PUSH_MESSAGE_TYPE_UNSPECIFIED = 0;
  PUSH_MESSAGE_TYPE_SINGLE = 1;
  PUSH_MESSAGE_TYPE_GROUP = 2;
}

// Event payload - can contain multiple event types
message PushEventPayload {
  repeated PushEventType event_types = 1;
}

// Message payload - contains the actual message
message PushMessagePayload {
  PushMessageType message_type = 1;
  SendMessageReq message_data = 2;
  int32 unread_count = 3;  // recipient's unread count for this conversation
}

// Main request structure
message PushMessageRequest {
  string send_user_id = 1;
  string receive_user_id = 2;
  string receive_device_id = 3;
  oneof payload {
    PushEventPayload event_payload = 4;
    PushMessagePayload message_payload = 5;
  }
}

message WsMessage {
  oneof message_type {
    HeartbeatRequest heartbeat_request = 1;
    HeartbeatResponse heartbeat_response = 2;
    PushMessageRequest push_message_request = 3;
  }
}

message HeartbeatRequest {
  string user_id = 1;
  int64  timestamp = 2;
}

message HeartbeatResponse {
  string user_id = 1;
  int64  client_timestamp = 2;
  int64  server_timestamp = 3;
}